{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 378,
  "lineage": "883f7111-9328-75c9-2af1-0617effa6ebe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:160813693969:loadbalancer/app/xai-api-lb/580b4000fb04478a",
            "arn_suffix": "app/xai-api-lb/580b4000fb04478a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "xai-api-lb-835033547.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:160813693969:loadbalancer/app/xai-api-lb/580b4000fb04478a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "xai-api-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e0d728edc031564d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0304e235f3188f41c"
              },
              {
                "subnet_id": "subnet-05ebe242be426a4d8"
              }
            ],
            "subnets": [
              "subnet-0304e235f3188f41c",
              "subnet-05ebe242be426a4d8"
            ],
            "tags": {
              "Name": "xai-api-lb"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-api-lb",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:160813693969:listener/app/xai-api-lb/580b4000fb04478a/a289a2ce9dc02e98",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:160813693969:targetgroup/xai-api-tg/aeb1901ac8a87f7a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:160813693969:listener/app/xai-api-lb/580b4000fb04478a/a289a2ce9dc02e98",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:160813693969:loadbalancer/app/xai-api-lb/580b4000fb04478a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Project": "XAI-Blockchain"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:160813693969:targetgroup/xai-api-tg/aeb1901ac8a87f7a",
            "arn_suffix": "targetgroup/xai-api-tg/aeb1901ac8a87f7a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:160813693969:targetgroup/xai-api-tg/aeb1901ac8a87f7a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:160813693969:loadbalancer/app/xai-api-lb/580b4000fb04478a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "xai-api-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "xai-api-tg"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-api-tg",
              "Project": "XAI-Blockchain"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:security-group/sg-0e0d728edc031564d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0d728edc031564d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "xai-alb-sg-20251122014254190800000004",
            "name_prefix": "xai-alb-sg-",
            "owner_id": "160813693969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Project": "XAI-Blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blockchain_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:security-group/sg-0fb5afb1371c840bc",
            "description": "Security group for XAI blockchain nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb5afb1371c840bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "P2P blockchain communication",
                "from_port": 8333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8333
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "REST API",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Prometheus metrics",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "xai-blockchain-node-sg",
            "name_prefix": "",
            "owner_id": "160813693969",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xai-blockchain-node-sg"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-blockchain-node-sg",
              "Project": "XAI-Blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:network-acl/acl-018fd9ae1d148fbf9",
            "default_network_acl_id": "acl-018fd9ae1d148fbf9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-018fd9ae1d148fbf9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "160813693969",
            "subnet_ids": [
              "subnet-0016f63bb14094994",
              "subnet-0c1f22639ec1547c1",
              "subnet-0e3e2c67035c652e8",
              "subnet-0eaccf9684f8a8f41"
            ],
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_asia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:route-table/rtb-06d4e3c200b307587",
            "default_route_table_id": "rtb-06d4e3c200b307587",
            "id": "rtb-06d4e3c200b307587",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_asia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:security-group/sg-049a650a24dd03218",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-049a650a24dd03218",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "160813693969",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_asia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c07aee2c95231ba8",
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:elastic-ip/eipalloc-0c07aee2c95231ba8",
            "association_id": "eipassoc-08b3444bee8359997",
            "domain": "vpc",
            "id": "eipalloc-0c07aee2c95231ba8",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0fde2da66db5579e7",
            "private_dns": "ip-10-2-101-198.ap-southeast-1.compute.internal",
            "private_ip": "10.2.101.198",
            "public_dns": "ec2-47-130-222-197.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.222.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_asia.aws_internet_gateway.this",
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:internet-gateway/igw-07c041a6d9fb6e900",
            "id": "igw-07c041a6d9fb6e900",
            "owner_id": "160813693969",
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "dependencies": [
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c07aee2c95231ba8",
            "association_id": "eipassoc-08b3444bee8359997",
            "connectivity_type": "public",
            "id": "nat-0b827d1470a37c5e5",
            "network_interface_id": "eni-0fde2da66db5579e7",
            "private_ip": "10.2.101.198",
            "public_ip": "47.130.222.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eaccf9684f8a8f41",
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            }
          },
          "dependencies": [
            "module.vpc_asia.aws_eip.nat",
            "module.vpc_asia.aws_internet_gateway.this",
            "module.vpc_asia.aws_subnet.public",
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055753c72d529c9c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b827d1470a37c5e5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055753c72d529c9c2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_asia.aws_eip.nat",
            "module.vpc_asia.aws_internet_gateway.this",
            "module.vpc_asia.aws_nat_gateway.this",
            "module.vpc_asia.aws_route_table.private",
            "module.vpc_asia.aws_subnet.public",
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07c041a6d9fb6e900",
            "id": "r-rtb-087491e6b5dc9601c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-087491e6b5dc9601c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_asia.aws_internet_gateway.this",
            "module.vpc_asia.aws_route_table.public",
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:route-table/rtb-055753c72d529c9c2",
            "id": "rtb-055753c72d529c9c2",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b827d1470a37c5e5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:route-table/rtb-087491e6b5dc9601c",
            "id": "rtb-087491e6b5dc9601c",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c041a6d9fb6e900",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e07e19e8d3a6e69f",
            "route_table_id": "rtb-055753c72d529c9c2",
            "subnet_id": "subnet-0c1f22639ec1547c1"
          },
          "dependencies": [
            "module.vpc_asia.aws_route_table.private",
            "module.vpc_asia.aws_subnet.private",
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fadc065edd8dd24",
            "route_table_id": "rtb-055753c72d529c9c2",
            "subnet_id": "subnet-0016f63bb14094994"
          },
          "dependencies": [
            "module.vpc_asia.aws_route_table.private",
            "module.vpc_asia.aws_subnet.private",
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026dbf1cf5d51ac62",
            "route_table_id": "rtb-087491e6b5dc9601c",
            "subnet_id": "subnet-0eaccf9684f8a8f41"
          },
          "dependencies": [
            "module.vpc_asia.aws_route_table.public",
            "module.vpc_asia.aws_subnet.public",
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d269cce0c64c5a14",
            "route_table_id": "rtb-087491e6b5dc9601c",
            "subnet_id": "subnet-0e3e2c67035c652e8"
          },
          "dependencies": [
            "module.vpc_asia.aws_route_table.public",
            "module.vpc_asia.aws_subnet.public",
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:subnet/subnet-0c1f22639ec1547c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1f22639ec1547c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "dependencies": [
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:subnet/subnet-0016f63bb14094994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0016f63bb14094994",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "dependencies": [
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:subnet/subnet-0eaccf9684f8a8f41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaccf9684f8a8f41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "dependencies": [
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:subnet/subnet-0e3e2c67035c652e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3e2c67035c652e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0f5d05635e191d199"
          },
          "dependencies": [
            "module.vpc_asia.aws_vpc.this",
            "module.vpc_asia.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_asia",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:160813693969:vpc/vpc-0f5d05635e191d199",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-018fd9ae1d148fbf9",
            "default_route_table_id": "rtb-06d4e3c200b307587",
            "default_security_group_id": "sg-049a650a24dd03218",
            "dhcp_options_id": "dopt-09a7c2a0a1a640243",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5d05635e191d199",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d4e3c200b307587",
            "owner_id": "160813693969",
            "tags": {
              "Name": "xai-testnet-vpc-asia"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-asia",
              "Project": "XAI-Blockchain"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:network-acl/acl-0244745c908d07c87",
            "default_network_acl_id": "acl-0244745c908d07c87",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0244745c908d07c87",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "160813693969",
            "subnet_ids": [
              "subnet-00b706ebf1e71425b",
              "subnet-0121777f196d16502",
              "subnet-0372ec3cc7496cd0d",
              "subnet-09b093754ff88330a"
            ],
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_eu.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:route-table/rtb-07a68c38b08c4fc53",
            "default_route_table_id": "rtb-07a68c38b08c4fc53",
            "id": "rtb-07a68c38b08c4fc53",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_eu.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:security-group/sg-0f71053a2eceb6a05",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f71053a2eceb6a05",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "160813693969",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_eu.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0f78ad3932d67ed",
            "arn": "arn:aws:ec2:eu-west-1:160813693969:elastic-ip/eipalloc-0b0f78ad3932d67ed",
            "association_id": "eipassoc-0b5e91599850782a9",
            "domain": "vpc",
            "id": "eipalloc-0b0f78ad3932d67ed",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f82a6bd2bcc609be",
            "private_dns": "ip-10-1-101-212.eu-west-1.compute.internal",
            "private_ip": "10.1.101.212",
            "public_dns": "ec2-34-249-87-9.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.87.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_eu.aws_internet_gateway.this",
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:internet-gateway/igw-0d9d09ee2fc3689fa",
            "id": "igw-0d9d09ee2fc3689fa",
            "owner_id": "160813693969",
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "dependencies": [
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0f78ad3932d67ed",
            "association_id": "eipassoc-0b5e91599850782a9",
            "connectivity_type": "public",
            "id": "nat-07592b29697964783",
            "network_interface_id": "eni-0f82a6bd2bcc609be",
            "private_ip": "10.1.101.212",
            "public_ip": "34.249.87.9",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0372ec3cc7496cd0d",
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            }
          },
          "dependencies": [
            "module.vpc_eu.aws_eip.nat",
            "module.vpc_eu.aws_internet_gateway.this",
            "module.vpc_eu.aws_subnet.public",
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f037e55e2781348e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07592b29697964783",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f037e55e2781348e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_eu.aws_eip.nat",
            "module.vpc_eu.aws_internet_gateway.this",
            "module.vpc_eu.aws_nat_gateway.this",
            "module.vpc_eu.aws_route_table.private",
            "module.vpc_eu.aws_subnet.public",
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d9d09ee2fc3689fa",
            "id": "r-rtb-0a873ea435e4e02331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a873ea435e4e0233",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_eu.aws_internet_gateway.this",
            "module.vpc_eu.aws_route_table.public",
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:route-table/rtb-0f037e55e2781348e",
            "id": "rtb-0f037e55e2781348e",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07592b29697964783",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:route-table/rtb-0a873ea435e4e0233",
            "id": "rtb-0a873ea435e4e0233",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9d09ee2fc3689fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc9353e0cd49343c",
            "route_table_id": "rtb-0f037e55e2781348e",
            "subnet_id": "subnet-00b706ebf1e71425b"
          },
          "dependencies": [
            "module.vpc_eu.aws_route_table.private",
            "module.vpc_eu.aws_subnet.private",
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0128e811318e25a",
            "route_table_id": "rtb-0f037e55e2781348e",
            "subnet_id": "subnet-09b093754ff88330a"
          },
          "dependencies": [
            "module.vpc_eu.aws_route_table.private",
            "module.vpc_eu.aws_subnet.private",
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b797c0b1e4c3a2f4",
            "route_table_id": "rtb-0a873ea435e4e0233",
            "subnet_id": "subnet-0372ec3cc7496cd0d"
          },
          "dependencies": [
            "module.vpc_eu.aws_route_table.public",
            "module.vpc_eu.aws_subnet.public",
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c82e6917f43c41e",
            "route_table_id": "rtb-0a873ea435e4e0233",
            "subnet_id": "subnet-0121777f196d16502"
          },
          "dependencies": [
            "module.vpc_eu.aws_route_table.public",
            "module.vpc_eu.aws_subnet.public",
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:subnet/subnet-00b706ebf1e71425b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b706ebf1e71425b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "dependencies": [
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:subnet/subnet-09b093754ff88330a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b093754ff88330a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "dependencies": [
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:subnet/subnet-0372ec3cc7496cd0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0372ec3cc7496cd0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "dependencies": [
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:subnet/subnet-0121777f196d16502",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0121777f196d16502",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0d868eee07dbeb6ca"
          },
          "dependencies": [
            "module.vpc_eu.aws_vpc.this",
            "module.vpc_eu.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_eu",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:160813693969:vpc/vpc-0d868eee07dbeb6ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0244745c908d07c87",
            "default_route_table_id": "rtb-07a68c38b08c4fc53",
            "default_security_group_id": "sg-0f71053a2eceb6a05",
            "dhcp_options_id": "dopt-0dc5d304fc9e0ebac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d868eee07dbeb6ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a68c38b08c4fc53",
            "owner_id": "160813693969",
            "tags": {
              "Name": "xai-testnet-vpc-eu"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-eu",
              "Project": "XAI-Blockchain"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:network-acl/acl-026a76727cbba6e41",
            "default_network_acl_id": "acl-026a76727cbba6e41",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-026a76727cbba6e41",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "160813693969",
            "subnet_ids": [
              "subnet-0304e235f3188f41c",
              "subnet-03f7881d92adf3d77",
              "subnet-05ebe242be426a4d8",
              "subnet-073d5b1ae1f711e98"
            ],
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:route-table/rtb-00e022659e568435b",
            "default_route_table_id": "rtb-00e022659e568435b",
            "id": "rtb-00e022659e568435b",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:security-group/sg-0604f32057537d9be",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0604f32057537d9be",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "160813693969",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0563fc219a0171602",
            "arn": "arn:aws:ec2:us-east-1:160813693969:elastic-ip/eipalloc-0563fc219a0171602",
            "association_id": "eipassoc-0f92b4cca79b03708",
            "domain": "vpc",
            "id": "eipalloc-0563fc219a0171602",
            "network_border_group": "us-east-1",
            "network_interface": "eni-039904841919e98f8",
            "private_dns": "ip-10-0-101-92.ec2.internal",
            "private_ip": "10.0.101.92",
            "public_dns": "ec2-34-200-12-51.compute-1.amazonaws.com",
            "public_ip": "34.200.12.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:internet-gateway/igw-064ed54f4cd48ac0f",
            "id": "igw-064ed54f4cd48ac0f",
            "owner_id": "160813693969",
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0563fc219a0171602",
            "association_id": "eipassoc-0f92b4cca79b03708",
            "connectivity_type": "public",
            "id": "nat-015b0f26186f95af6",
            "network_interface_id": "eni-039904841919e98f8",
            "private_ip": "10.0.101.92",
            "public_ip": "34.200.12.51",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ebe242be426a4d8",
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            }
          },
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0608a7c7a54d37ad91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-015b0f26186f95af6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0608a7c7a54d37ad9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_nat_gateway.this",
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-064ed54f4cd48ac0f",
            "id": "r-rtb-08f5b772103238a4d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f5b772103238a4d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:route-table/rtb-0608a7c7a54d37ad9",
            "id": "rtb-0608a7c7a54d37ad9",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015b0f26186f95af6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:route-table/rtb-08f5b772103238a4d",
            "id": "rtb-08f5b772103238a4d",
            "owner_id": "160813693969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064ed54f4cd48ac0f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01126c41796beff78",
            "route_table_id": "rtb-0608a7c7a54d37ad9",
            "subnet_id": "subnet-03f7881d92adf3d77"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a759f0a015d8d8c",
            "route_table_id": "rtb-0608a7c7a54d37ad9",
            "subnet_id": "subnet-073d5b1ae1f711e98"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01da8ff0b3012457c",
            "route_table_id": "rtb-08f5b772103238a4d",
            "subnet_id": "subnet-05ebe242be426a4d8"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a72fc4e5f0e17230",
            "route_table_id": "rtb-08f5b772103238a4d",
            "subnet_id": "subnet-0304e235f3188f41c"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:subnet/subnet-03f7881d92adf3d77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f7881d92adf3d77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:subnet/subnet-073d5b1ae1f711e98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073d5b1ae1f711e98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:subnet/subnet-05ebe242be426a4d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ebe242be426a4d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:subnet/subnet-0304e235f3188f41c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0304e235f3188f41c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160813693969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            },
            "vpc_id": "vpc-0a19736eb2c4c5aa8"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160813693969:vpc/vpc-0a19736eb2c4c5aa8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026a76727cbba6e41",
            "default_route_table_id": "rtb-00e022659e568435b",
            "default_security_group_id": "sg-0604f32057537d9be",
            "dhcp_options_id": "dopt-0bfd9da5cb018bae6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a19736eb2c4c5aa8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e022659e568435b",
            "owner_id": "160813693969",
            "tags": {
              "Name": "xai-testnet-vpc-primary"
            },
            "tags_all": {
              "Environment": "testnet",
              "ManagedBy": "Terraform",
              "Name": "xai-testnet-vpc-primary",
              "Project": "XAI-Blockchain"
            }
          }
        }
      ]
    }
  ]
}